syntax = "proto3";

package users;

service UsersService {
  rpc FindUser(FindUserRequest) returns (User);
  rpc CreateUser(CreateUserRequest) returns (User);
}

message FindUserRequest {
  int32 id = 1;
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
}

message User {
  int32 id = 1;
  string username = 2;
  string password = 3;
}